--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,10 +1,12 @@
 .about-us-container {
-    width: 1000px;
-    /* margin: 0 auto; */
-    /* padding: 20px; */
-    /* background-color: red; */
-    text-align: justify;
-  }
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: justify;
+  box-sizing: border-box;
+}
+
   
   .about-us-heading {
     font-size: 32px;
