--- a/src/App.css
+++ b/src/App.css
@@ -37,19 +37,17 @@
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  text-align: center;
-  /* background-color: red; */
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  padding: 40px;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  text-align: center;
   gap: 10px;
+  z-index: 1;
 }
 
 .content p,
@@ -58,12 +56,8 @@
 }
 
 .content h1 {
-  font-size: 48px;
-  margin-bottom: 10px;
-}
-
-.content p {
-  font-size: 25px;
+  font-size: 35px;
+  margin-bottom: 5px;
 }
 
 .divider {
