--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,12 +1,10 @@
 .about-us-container {
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: justify;
-  box-sizing: border-box;
-}
-
+    width: 1000px;
+    /* margin: 0 auto; */
+    /* padding: 20px; */
+    /* background-color: red; */
+    text-align: justify;
+  }
   
   .about-us-heading {
     font-size: 32px;
