--- a/src/App.css
+++ b/src/App.css
@@ -37,17 +37,19 @@
 }
 
 .landing_content {
-  width: 100%;
-  max-width: 400px;
-  height: auto;
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  gap: 10px;
+ margin-top: 430px;
+  margin-left: 100px;
+  transform: translate(-50%, -50%);
   z-index: 1;
+  text-align: center;
+  /* background-color: red; */
+  width: 400px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
 }
 
 .content p,
@@ -56,8 +58,12 @@
 }
 
 .content h1 {
-  font-size: 35px;
-  margin-bottom: 5px;
+  font-size: 48px;
+  margin-bottom: 10px;
+}
+
+.content p {
+  font-size: 25px;
 }
 
 .divider {
